# magic_utils

./: .gitignore  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  HOW_TO_USE_SPHINX.md  generate_docs.bat  init_docs.bat
.github/workflows/: codecov-coverage.yml  python-publish.yml
docs/html/: .buildinfo  genindex.html  index.html  magic_utils.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  tests.html
docs/html/_modules/: index.html
docs/html/_modules/magic_utils/: channel.html  eventmanager.html
docs/html/_modules/tests/: test_channel.html
docs/html/_sources/: index.rst.txt  magic_utils.rst.txt  modules.rst.txt  tests.rst.txt
magic_utils/: __init__.py  channel.py  eventmanager.py
tests/: test_channel.py
